--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -19,11 +19,11 @@
     border-radius: 2rem;
     overflow: hidden;
     transform: rotate(10deg);
-    transition: var(--transition)
+    transition: var(--transition);
 }
 
 .about__me-image:hover {
-    transform: rotate(0)
+    transform: rotate(0);
 }
 
 .about__cards {
