--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -81,9 +81,19 @@
 
     }
 
+    .about__content {
+        text-align: center;
+    }
+
     .about__content p {
         margin: 1rem 0 1.5rem;
+    }
 
+    .about__cards {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* change  2 with no. of card */
+        gap: 3rem;
     }
 }
 
