--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -6,7 +6,7 @@
 
 .experience__container>div {
     background: var(--color-bg-variant);
-    padding: 2.4rem 5rem;
+    padding: 2.4rem 3rem;
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
@@ -20,7 +20,7 @@
 
 .experience__container>div h3 {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     color: var(--color-primary);
 }
 
@@ -71,4 +71,9 @@
         width: 100%;
         padding: 2rem 1rem;
     }
+
+    .experience__details {
+        padding: 0.3rem;
+    }
+
 }
